# rp_ads1278

./: .gitignore  ADS1278_SPI.md  README.md  fpga-build.sh  fpga-deploy.sh  server-build-cross.sh  server-build-docker.sh  server-deploy.sh  systemd-service-deploy.sh
.cursor/commands/: commit-message.md  doc-feature.md  handoff.md
.cursor/rules/: rp-ads1278-scope.mdc  rp-mmio-addressing.mdc
client/: README.md  main.py  pyproject.toml
client/ads1278_client/: __init__.py  controller.py  csv_logger.py  main_window.py  models.py  protocol.py  transport.py
client/tests/: test_controller_and_main_window.py  test_csv_logger.py  test_protocol.py  test_transport.py
client/tools/: fake_server.py
docs/feats/: _docs.md  ads1278-acquisition-pipeline.md  board-io-wiring.md  client.md  dma-frame-record.md  fpga-build-and-deploy.md  fpga-register-map.md  fpga.md  server-mmio-contract.md  server-protocol.md  server.md
docs/handoffs/: 20260303_implementation-plan.md  20260304_fpga-work.md  20260406_fpga-build-preflight-gap.md  20260406_next-development-steps.md  20260406b_server-implementation-and-documentation.md  20260407_ops-readiness.md  20260407_python-client-implementation.md  20260407_stock-fpga-recovery.md  20260408_pre-bringup-manual-qa.md  20260408_remaining-fpga-work.md  20260416_dma-route-migration-plan.md  20260421_phase4-pl-ddr-hp0-bringup.md  20260422_phase5-dma-mmio-control.md
fpga/: regenerate_project_and_bd.tcl
server/: Makefile  cmd_parse.c  cmd_parse.h  dma_frame.h  memory_map.c  memory_map.h  protocol.h  rpdevmem.c  server.c  server.h
(+27 files in other folders)
