[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ads1278-client"
version = "0.1.0"
description = "Desktop client for the rp_ads1278 Red Pitaya server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "PySide6",
    "pyqtgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ads1278-client = "ads1278_client.main_window:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ads1278_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
